fix notification card semantics and spacing

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -352,3 +352,7 @@ li.notification-unread {
 li.notification-read {
     border-color: #2d6cdf55;
 }
+
+li.notification-card ul {
+    margin-bottom: 1em;
+}
